fix roles