@@ -18,6 +18,7 @@ import org.springframework.stereotype.Component;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Component
 public class Startup {
@@ -44,6 +45,7 @@ public class Startup {
 
         if (productRepository.count() > 0) {
             logger.info("Already initialized, skipping adding initial entities");
+            return;
         }
 
         productRepository.saveAll(Arrays.asList(
@@ -57,7 +59,7 @@ public class Startup {
                 new Promocode("USKOV", 50, PromocodeStatus.INACTIVE)
         ));
 
-        userRepository.saveAll(Arrays.asList(
+        userRepository.saveAll(List.of(
                 new User("user@sd.com", "username", "$2b$12$CekwqWUxTHJKKCa8qEAOo.8pyOhGMMjdKDoBceMqAAp4/2TEAdr2.",
                         "89023457654", Role.ROLE_USER)));
     }
